--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ VOC/
 !targets*.mat
 
 # Neural Network weights -----------------------------------------------------------------------------------------------
+#*.weights
+#*.pt
 *.pb
 *.onnx
 *.engine
